--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/material": "^6.1.5",
     "musicbrainz-api": "^0.19.1",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tss-react": "^4.9.13"
   },
   "devDependencies": {
